# AI-product-recommendation

./: pyproject.toml
src/components/: extract.py  transform.py
src/config/: setting.py
src/utils/: embedder.py  vector_connection.py
